8259008: ArithmeticException was thrown at "Monitor Cache Dump" on HSDB