src/hotspot/share/runtime/synchronizer.cpp
@@ -57,31 +57,6 @@
 #include "utilities/events.hpp"
 #include "utilities/preserveException.hpp"
 
-class MonitorList {
-  ObjectMonitor* volatile _head;
-  volatile size_t _count;
-  volatile size_t _max;
-
-public:
-  void add(ObjectMonitor* monitor);
-  size_t unlink_deflated(Thread* self, LogStream* ls, elapsedTimer* timer_p,
-                         GrowableArray<ObjectMonitor*>* unlinked_list);
-  size_t count() const;
-  size_t max() const;
-
-  class Iterator;
-  Iterator iterator() const;
-};
-
-class MonitorList::Iterator {
-  ObjectMonitor* _current;
-
-public:
-  Iterator(ObjectMonitor* head) : _current(head) {}
-  bool has_next() const { return _current != NULL; }
-  ObjectMonitor* next();
-};
-
 void MonitorList::add(ObjectMonitor* m) {
   ObjectMonitor* head;
   do {
@@ -237,7 +212,7 @@ void ObjectSynchronizer::initialize() {
   }
 }
 
-static MonitorList _in_use_list;
+MonitorList ObjectSynchronizer::_in_use_list;
 // The ratio of the current _in_use_list count to the ceiling is used
 // to determine if we are above MonitorUsedDeflationThreshold and need
 // to do an async monitor deflation cycle. The ceiling is increased by
